Add updated Rachel.ipynb

--- a/Rachel.ipynb
+++ b/Rachel.ipynb
@@ -21,7 +21,7 @@
    "id": "457934c7-26b8-4e21-aa05-33bdeb087c05",
    "metadata": {},
    "source": [
-    "The submetric I chose that can be used to determine which neighborhood is the most outdoor-friendly is public art displays. My data set lists public art displays in different neighborhoods of Pittsburgh. I used the data to determine which neighboorhood has the most public art displays, which makes the neighborhood more enjoyable to be outside in."
+    "The submetric I chose that can be used to determine which neighborhood is the most outdoor-friendly is public art displays. My data set lists public art displays in different neighborhoods of Pittsburgh. I used the data to determine which neighboorhood has the most public art displays, which makes the neighborhood more enjoyable to be outside in!"
    ]
   },
   {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fd1e2707-5eef-49ac-8651-6d7c3578c263",
    "metadata": {},
    "outputs": [
@@ -226,12 +226,13 @@
        "4 -80.016981  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# import pandas, read in data, and display first few rows to ensure it was read in properly\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "%matplotlib inline\n",
@@ -246,12 +247,12 @@
    "metadata": {},
    "source": [
     "## Make a Bar Chart\n",
-    "This bar chart uses just the neighboorhood column of the data to show the count of public art displays in each neighborhood, which is my variable of interest."
+    "This bar chart uses just the neighboorhood column of the data to show the count of public art displays in each neighborhood, which is my variable of interest!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "e5eda4d2-bc68-405a-8f68-f4da97c8cf43",
    "metadata": {},
    "outputs": [
@@ -261,7 +262,7 @@
        "<Axes: xlabel='Neighborhood', ylabel='Number of Public Art Displays'>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -277,7 +278,8 @@
     }
    ],
    "source": [
-    "art[\"neighborhood\"].value_counts().sort_index().plot(kind = \"bar\", rot = 90, figsize = (10,5), xlabel = \"Neighborhood\", ylabel = \"Number of Public Art Displays\")"
+    "art[\"neighborhood\"].value_counts().sort_index().plot(kind = \"bar\", rot = 90, figsize = (10,5), \n",
+    "                                                     xlabel = \"Neighborhood\", ylabel = \"Number of Public Art Displays\")"
    ]
   },
   {
@@ -286,12 +288,12 @@
    "metadata": {},
    "source": [
     "## Sort the Bar Graph from Greatest to Least\n",
-    "I got feedback on the first graph I made that I should sort the bars from greatest to least number of public art displays. This way, it is easy for viewers to see which neighborhood has the most. "
+    "Let's sort the bars in the graph from greatest to least with sort_values(ascending=False). This way, it is easy for viewers to see which neighborhood has the most. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c824622d-2800-4338-a79f-47909a604551",
    "metadata": {},
    "outputs": [
@@ -301,7 +303,7 @@
        "<Axes: xlabel='Neighborhood', ylabel='Number of Public Art Displays'>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -317,16 +319,8 @@
     }
    ],
    "source": [
-    "art[\"neighborhood\"].value_counts().sort_values(ascending=False).plot(kind = \"bar\", rot=90,figsize = (10,5), xlabel = \"Neighborhood\", ylabel= \"Number of Public Art Displays\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "50201c81-5e9f-4122-b71d-e54f67f3dbab",
-   "metadata": {},
-   "source": [
-    "## Conclusion\n",
-    "Based on the bar chart, the Central Business District has the greatest amount of public art displays, with the other nieghborhoods not coming close to its ount of over 25. This means that Central Business District wins in terms of the public art aspect of having an outdoor-friendly neighborhood."
+    "art[\"neighborhood\"].value_counts().sort_values(ascending=False).plot(kind = \"bar\", rot=90,figsize = (10,5), \n",
+    "                                                                     xlabel = \"Neighborhood\", ylabel= \"Number of Public Art Displays\")"
    ]
   },
   {
@@ -340,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "4839ee1a-3cb9-43eb-aa79-a282623777c6",
    "metadata": {},
    "outputs": [
@@ -350,7 +344,7 @@
        "<Axes: ylabel='count'>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -367,6 +361,15 @@
    ],
    "source": [
     "art[\"neighborhood\"].value_counts().sort_index().plot.pie(y='neighborhood', subplots=False, figsize=(20, 20))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50201c81-5e9f-4122-b71d-e54f67f3dbab",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "Based on the bar chart, the Central Business District has the greatest amount of public art displays, with the other nieghborhoods not coming close to its count of over 25. This means that Central Business District wins in terms of the public art aspect of having an outdoor-friendly neighborhood!"
    ]
   },
   {
