--- a/AliNotebook.ipynb
+++ b/AliNotebook.ipynb
@@ -219,6 +219,32 @@
     "## **Conclusion**\n",
     "East Liberty takes the top spot for parks in Pittsburgh! The Central Business District comes in second and Beechview secures third! With the most green spaces, it’s clearly the best neighborhood for outdoor fun. The data shows a strong correlation between the number of parks and opportunities for outdoor recreation, making East Liberty the ideal choice for residents and visitors.So, if you’re looking to get outside, East Liberty’s where you’ll want to be!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b87ec8ab-47d7-4ea1-9a11-a97db2f2e9b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hey there\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hey there\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee8395e0-fa42-4a80-a68a-4180988f4dff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
